--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^4.18.2",
     "immutable": "^4.3.0",
     "node-fetch": "^2.6.0"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^4.15.1"
   }
 }
