--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
     "body-parser": "^1.20.2",
     "dotenv": "^8.6.0",
     "express": "^4.18.2",
-    "immutable": "^4.3.0",
+    "immutable": "^4.3.1",
     "node-fetch": "^2.6.0"
   },
-  "devDependencies": {
-    "webpack-dev-server": "^4.15.1"
-  }
+  "devDependencies": {}
 }
